--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "bootstrap": "^4.6.0",
     "flatlist-react": "^1.5.0",
     "haversine": "^1.1.1",
     "next": "10.0.5",
     "react": "17.0.1",
+    "react-bootstrap": "^1.5.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.1",
     "react-geolocated": "^3.1.0"
   }
